# slaq

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release-please.yml  release-plz.yml
examples/: blocks.rs  blocks_macros.rs  elements.rs  elements_macros.rs  hello.rs
slaq-macros/: CHANGELOG.md  Cargo.toml
slaq-macros/src/: lib.rs
src/: client.rs  lib.rs  macros.rs  prelude.rs
src/api/: call.rs  mod.rs
src/api/chat/: delete.rs  delete_scheduled_message.rs  me_message.rs  mod.rs  post_ephemeral.rs  post_message.rs  schedule_message.rs  scheduled_messages_list.rs  unfurl.rs  update.rs
src/blocks/: actions_block.rs  context_actions_block.rs  context_block.rs  file_block.rs  image_block.rs  input_block.rs  mod.rs  rich_text.rs  section_block.rs  simple.rs  table_block.rs  text.rs  video_block.rs
src/blocks/elements/: buttons.rs  choices.rs  common.rs  context.rs  context_actions.rs  inputs.rs  mod.rs  selects.rs
src/blocks/rich_text/: mod.rs
src/client/: async.rs  blocking.rs  method.rs  mod.rs
src/macros/: blocks.rs  elements.rs  mod.rs  text.rs
tests/: block_examples.rs  block_macros.rs  build_delete.rs  build_delete_scheduled_message.rs  build_me_message.rs  build_post_ephemeral.rs  build_post_message.rs  build_schedule_message.rs  build_scheduled_messages_list.rs  build_unfurl.rs  build_update.rs  element_macros.rs
