[package]
name = "slaq"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
thiserror = "2.0.16"
slaq_macros = { path = "slaq-macros" }


[features]
default = ["transport-reqwest"]
transport-reqwest = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["json", "blocking", "rustls-tls"]
optional = true

[dev-dependencies]
slaq_macros = { path = "slaq-macros" }
