[package]
name = "slaq"
description = "A Slack API payload builder and client"
version = "0.0.3"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ikornaselur/slaq"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
thiserror = "2.0.16"
slaq_macros = { version = "0.0.2", path = "slaq-macros" }


[features]
default = []
transport-reqwest = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["json", "blocking", "rustls-tls"]
optional = true

[dev-dependencies]
slaq_macros = { version = "0.0.2", path = "slaq-macros" }

[workspace]
members = [
    "slaq-macros",
]
resolver = "2"
